--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>3.12.0</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
